[gd_scene load_steps=4 format=2]

[ext_resource path="res://code/pngtubermaker/PNGtuberMaker.gd" type="Script" id=1]
[ext_resource path="res://assets/default_res/buttongroups/creationgroup.tres" type="ButtonGroup" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="PNGtuberMaker" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_right = 1393.0
margin_bottom = 729.0
color = Color( 0, 0, 0, 0.215686 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
margin_left = 127.0
margin_top = 62.0
margin_right = 853.0
margin_bottom = 522.0

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 719.0
margin_bottom = 461.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
margin_right = 712.0
margin_bottom = 454.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 454.0
rect_min_size = Vector2( 160, 0 )

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 14.0
text = "--Silent Expressions--"
align = 1

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 22.0

[node name="B0" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 160.0
margin_bottom = 46.0
toggle_mode = true
group = ExtResource( 2 )
text = "Silent Normal"

[node name="B1" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 160.0
margin_bottom = 70.0
toggle_mode = true
group = ExtResource( 2 )
text = "Silent Happy"

[node name="B2" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 160.0
margin_bottom = 94.0
toggle_mode = true
group = ExtResource( 2 )
text = "Silent Excited"

[node name="B3" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 160.0
margin_bottom = 118.0
toggle_mode = true
group = ExtResource( 2 )
text = "Silent Angry"

[node name="HSeparator2" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 160.0
margin_bottom = 126.0

[node name="Label2" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 160.0
margin_bottom = 144.0
text = "--Talking Expressions--"
align = 1

[node name="HSeparator3" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 160.0
margin_bottom = 152.0

[node name="B4" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 160.0
margin_bottom = 176.0
toggle_mode = true
group = ExtResource( 2 )
text = "Talking Normal"

[node name="B5" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 160.0
margin_bottom = 200.0
toggle_mode = true
group = ExtResource( 2 )
text = "Talking Happy"

[node name="B6" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 160.0
margin_bottom = 224.0
toggle_mode = true
group = ExtResource( 2 )
text = "Talking Excited"

[node name="B7" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 160.0
margin_bottom = 248.0
toggle_mode = true
group = ExtResource( 2 )
text = "Talking Angry"

[node name="HSeparator4" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 160.0
margin_bottom = 256.0

[node name="Label3" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 160.0
margin_bottom = 274.0
text = "--Misc--"
align = 1

[node name="HSeparator5" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 160.0
margin_bottom = 282.0

[node name="DeleteFrame" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 286.0
margin_right = 160.0
margin_bottom = 306.0
text = "Delete Frame"

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 160.0
margin_bottom = 398.0

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_right = 160.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Animation Framerate"
align = 1
valign = 1

[node name="FPSCounter" type="SpinBox" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 160.0
margin_bottom = 42.0
value = 10.0
rounded = true
align = 1
suffix = "FPS"

[node name="Label2" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 46.0
margin_right = 160.0
margin_bottom = 60.0
text = "Current Frame"
align = 1

[node name="FrameCounter" type="SpinBox" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GridContainer"]
margin_top = 64.0
margin_right = 160.0
margin_bottom = 88.0
rounded = true
allow_greater = true
align = 1
editable = false
prefix = "Frame"

[node name="HSeparator6" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 160.0
margin_bottom = 406.0

[node name="Button9" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 160.0
margin_bottom = 430.0
text = "Save As .tres"

[node name="Button12" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 160.0
margin_bottom = 454.0
text = "Close Window"

[node name="VSeparator" type="VSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 168.0
margin_bottom = 454.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 712.0
margin_bottom = 454.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 540.0
margin_bottom = 14.0
text = "--PNGTuber Maker--"
align = 1

[node name="HSeparator" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 540.0
margin_bottom = 22.0

[node name="Control" type="Control" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 26.0
margin_right = 540.0
margin_bottom = 422.0
size_flags_vertical = 3

[node name="PreviewSpr" type="AnimatedSprite" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/Control"]
frames = SubResource( 1 )
centered = false

[node name="HSeparator2" type="HSeparator" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 426.0
margin_right = 540.0
margin_bottom = 430.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 434.0
margin_right = 540.0
margin_bottom = 454.0
alignment = 1

[node name="Button" type="Button" parent="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 227.0
margin_right = 312.0
margin_bottom = 20.0
text = "Load image"

[node name="OpenSprPath" type="FileDialog" parent="."]
margin_left = 295.0
margin_top = 94.0
margin_right = 887.0
margin_bottom = 484.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpeg", "*.jpg" )

[node name="SaveSprPath" type="FileDialog" parent="."]
margin_left = 295.0
margin_top = 94.0
margin_right = 887.0
margin_bottom = 484.0
resizable = true
access = 2
filters = PoolStringArray( "*.tres" )

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/DeleteFrame" to="." method="_on_DeleteFrame_pressed"]
[connection signal="value_changed" from="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/GridContainer/FPSCounter" to="." method="_on_FPSCounter_value_changed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="OpenSprPath" to="." method="_on_OpenSprPath_file_selected"]
[connection signal="file_selected" from="SaveSprPath" to="." method="_on_SaveSprPath_file_selected"]
